# thermocompute

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: cnn_experiment.json  end_to_end_parallel_tempered_training.json  flow_matching_experiment.json  gaussian_process_experiment.json  parallel_tempered_mask_alignment.json  parallel_tempering_double_well_escape.json  pdit_attention_sampling_convergence.json  pmog_multimodal_fidelity.json  precision_experiments.json  precision_training_comparison.json  readout_training_comparison.json  superiority_demo.json  superiority_demo.md  thermodynamic_readout_alignment.json  thermoneuron_width_scaling.json  training_cold_vs_parallel_tempered.json  transformer_vs_classical_width_benchmark.json  transformer_width_constant_physical_time.json  width_scaling_fixed_physical_time.json
docs/: claims.md  cnn.md  engineering_assessment.md  flow_matching.md  gaussian_processes.md  precision_scheme.md
examples/: gpt_style_block.py
scripts/: run_benchmarks.py  run_cnn_experiment.py  run_experiments.py  run_flow_matching_experiment.py  run_gaussian_process_experiment.py  run_poc.py  run_precision_experiments.py  run_precision_training_comparison.py  run_readout_training_comparison.py  run_smoke.py  run_stress.py  run_superiority_demo.py  run_tests.py
tests/: test_poc.py  test_smoke.py
thermocompute/: __init__.py  benchmarks.py  cnn.py  config.py  cuda_ext.py  distributions.py  experiments.py  flow_matching.py  gaussian_process.py  integration.py  memory.py  metrics.py  neurons.py  precision.py  primitives.py  superiority_demo.py  training.py  transformer.py
thermocompute/cuda/: thermo_kernels.cu
