[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermocompute"
version = "0.1.0"
description = "GPU-first PyTorch emulator for thermodynamic probabilistic computing and variable-width neural inference."
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "thermocompute contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
  "thermodynamic computing",
  "probabilistic computing",
  "pytorch",
  "stochastic neural networks",
  "transformers",
]
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
]

[project.optional-dependencies]
experiments = ["matplotlib>=3.7"]
test = ["pytest>=8.0"]
cuda = ["ninja>=1.11"]

[project.urls]
Homepage = "https://github.com/arccoxx/thermocompute"
Repository = "https://github.com/arccoxx/thermocompute"
Issues = "https://github.com/arccoxx/thermocompute/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["thermocompute*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
